<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/profile_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.example.skillcinema.CustomViewContainer
            android:id="@+id/watched_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:enable_quantity_imageView="true"
            app:title_text="@string/watched" />

        <TextView
            android:id="@+id/titleView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginTop="36dp"
            android:text="@string/collections"
            android:textAppearance="@style/TitleTextAppearance.Big" />

        <TextView
            android:id="@+id/create_collection_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginEnd="26dp"
            android:drawablePadding="16dp"
            android:paddingTop="24dp"
            android:paddingBottom="8dp"
            android:text="@string/create_collection"
            android:textAppearance="@style/TitleTextAppearance.400"
            app:drawableStartCompat="@drawable/ic_create_collection" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/collections_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginEnd="26dp" />

        <com.example.skillcinema.CustomViewContainer
            android:id="@+id/was_interesting_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="60dp"
            app:enable_quantity_imageView="true"
            app:title_text="@string/you_were_interesting" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>