<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:titleCentered="true"
        app:titleTextAppearance="@style/TitleTextAppearance.Small12" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="40dp">

            <TextView
                android:id="@+id/filter_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:layout_marginTop="16dp"
                android:text="@string/show"
                android:textAppearance="@style/SubTitleTextAppearance"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/filter_radio_group"
                android:layout_width="match_parent"
                android:layout_height="31dp"
                android:layout_marginStart="26dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="26dp"
                android:weightSum="3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/filter_text_view"
                app:singleSelection="true">

                <Button
                    android:id="@+id/filter_button_1"
                    style="@style/ToggleButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:paddingStart="0dp"
                    android:paddingEnd="0dp"
                    android:text="@string/all" />

                <Button
                    android:id="@+id/filter_button_2"
                    style="@style/ToggleButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:paddingStart="0dp"
                    android:paddingEnd="0dp"
                    android:text="@string/films" />

                <Button
                    android:id="@+id/filter_button_3"
                    style="@style/ToggleButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingStart="0dp"
                    android:paddingEnd="0dp"
                    android:text="@string/serials" />
            </com.google.android.material.button.MaterialButtonToggleGroup>

            <TextView
                android:id="@+id/country_title_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:layout_marginTop="16dp"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:text="@string/country"
                android:textAppearance="@style/TitleTextAppearance.400"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/filter_radio_group" />

            <TextView
                android:id="@+id/country_value_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="26dp"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:textAppearance="@style/SubTitleTextAppearance.Big"
                app:layout_constraintBottom_toBottomOf="@id/country_title_text_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/country_title_text_view"
                tools:text="@string/country" />

            <View
                android:id="@+id/separator_1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#4DB5B5C9"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/country_title_text_view" />

            <TextView
                android:id="@+id/genre_title_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:text="@string/genre"
                android:textAppearance="@style/TitleTextAppearance.400"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/separator_1" />

            <TextView
                android:id="@+id/genre_value_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="26dp"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:textAppearance="@style/SubTitleTextAppearance.Big"
                app:layout_constraintBottom_toBottomOf="@id/genre_title_text_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/genre_title_text_view"
                tools:text="@string/country" />

            <View
                android:id="@+id/separator_2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#4DB5B5C9"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/genre_title_text_view" />

            <TextView
                android:id="@+id/year_title_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:text="@string/year"
                android:textAppearance="@style/TitleTextAppearance.400"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/separator_2" />

            <TextView
                android:id="@+id/year_value_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="26dp"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:textAppearance="@style/SubTitleTextAppearance.Big"
                app:layout_constraintBottom_toBottomOf="@id/year_title_text_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/year_title_text_view"
                tools:text="@string/country" />

            <View
                android:id="@+id/separator_3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#4DB5B5C9"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/year_title_text_view" />

            <TextView
                android:id="@+id/rating_title_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:text="@string/rating"
                android:textAppearance="@style/TitleTextAppearance.400"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/separator_3" />

            <TextView
                android:id="@+id/rating_value_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="26dp"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:textAppearance="@style/SubTitleTextAppearance.Big"
                app:layout_constraintBottom_toBottomOf="@id/rating_title_text_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/rating_title_text_view"
                tools:text="@string/country" />

            <com.google.android.material.slider.RangeSlider
                android:id="@+id/rating_slider"
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"

                android:stepSize="1"
                android:valueFrom="0"
                android:valueTo="10"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rating_title_text_view"

                app:thumbColor="@color/white"
                app:thumbHeight="24dp"
                app:thumbStrokeColor="@color/black"
                app:thumbStrokeWidth="1dp"
                app:thumbWidth="24dp"

                app:trackColorActive="@color/blue"
                app:trackColorInactive="@color/subtitle_text_color"
                app:trackHeight="4dp"
                app:trackStopIndicatorSize="0dp" />

            <TextView
                android:id="@+id/rating_from_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:text="0"
                android:textAppearance="@style/SubTitleTextAppearance.Big"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rating_slider" />

            <TextView
                android:id="@+id/rating_to_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:text="10"
                android:textAppearance="@style/SubTitleTextAppearance.Big"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rating_slider" />

            <View
                android:id="@+id/separator_4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="#4DB5B5C9"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rating_from_text_view" />

            <TextView
                android:id="@+id/sort_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:layout_marginTop="16dp"
                android:text="@string/sort"
                android:textAppearance="@style/SubTitleTextAppearance"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/separator_4" />

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/sort_radio_group"
                android:layout_width="match_parent"
                android:layout_height="31dp"
                android:layout_marginStart="26dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="26dp"
                android:weightSum="3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sort_text_view"
                app:singleSelection="true">

                <Button
                    android:id="@+id/sort_button_1"
                    style="@style/ToggleButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:paddingStart="0dp"
                    android:paddingEnd="0dp"
                    android:text="@string/date" />

                <Button
                    android:id="@+id/sort_button_2"
                    style="@style/ToggleButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:paddingStart="0dp"
                    android:paddingEnd="0dp"
                    android:text="@string/popularity" />

                <Button
                    android:id="@+id/sort_button_3"
                    style="@style/ToggleButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingStart="0dp"
                    android:paddingEnd="0dp"
                    android:text="@string/rating" />
            </com.google.android.material.button.MaterialButtonToggleGroup>

            <View
                android:id="@+id/separator_5"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="32dp"
                android:background="#4DB5B5C9"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sort_radio_group" />

            <TextView
                android:id="@+id/watched_changer_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:drawablePadding="24dp"
                android:gravity="center_vertical"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:text="@string/not_watched"
                android:textAppearance="@style/TitleTextAppearance.400"
                app:drawableStartCompat="@drawable/ic_not_watched_settings"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/separator_5" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>
    <!--
    todo DONE
    -->