<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/actor_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="82dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/actor_image"
                style="@style/ImageViewStyle"
                android:layout_width="146dp"
                android:layout_height="201dp"
                android:layout_marginStart="26dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/actor_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:textAppearance="@style/TitleTextAppearance"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/actor_image"
                app:layout_constraintTop_toTopOf="@+id/actor_image" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/actor_subtitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:textAppearance="@style/SubTitleTextAppearance"
                app:layout_constraintEnd_toEndOf="@id/actor_name"
                app:layout_constraintStart_toStartOf="@+id/actor_name"
                app:layout_constraintTop_toBottomOf="@+id/actor_name" />

            <com.example.skillcinema.CustomViewContainer
                android:id="@+id/best_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                app:layout_constraintTop_toBottomOf="@id/actor_image"
                app:title_text="@string/the_best" />

            <com.example.skillcinema.CustomViewContainer
                android:id="@+id/filmography_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                app:enable_quantity_imageView="true"
                app:layout_constraintTop_toBottomOf="@id/best_container"
                app:quantity_text="@string/go_to_list"
                app:title_text="@string/filmography" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>